Bug#501575 - giving crash signature a z-index to make it selectable
git-svn-id: https://socorro.googlecode.com/svn/trunk@1194 efcc4bdc-162a-0410-a8af-5b4b46c5376d

--- a/webapp-php/css/slate.css
+++ b/webapp-php/css/slate.css
@@ -402,7 +402,7 @@ td.in1 ul, td.in2 ul{ padding-left: 15px; }
 #report-index h2, #report-index h3 {
    margin: 10px 0;
 }
-#report-header { width: 850px; }
+#report-header { position: relative; width: 850px; z-index: 1; }
 .list tr:nth-child(2n+1) {
   background-color: #ddd;
 }
